# blockstore

./: .gitignore  README.md
docs/: Blocks.md
docs/figs/: BlockstoreInstanceDiagram.xml  BlockstoreSystemDiagram.xml
src/app/: .env  BlockStoreClient.ts  Server.ts  package-lock.json  package.json  tsconfig.json
src/app/controllers/: Comments.ts  Posts.ts
src/app/models/: Comment.ts  Datastore.ts  Post.ts
src/app/views/: index.ejs
src/benchmark/: package-lock.json  package.json  runbench.sh  untitled.sh  workload.js  workloada  workloadb  workloadc  ycsb.js  ycsb_bs.js
src/benchmark/results3/: bs_10000_a.txt  bs_10000_b.txt  bs_10000_c.txt  bs_1000_a.txt  (+14 more)
src/bs/: Dockerfile  install_docker.sh  install_mongo.sh
src/bs-client/: BlockStoreClient.ts  CLI.ts  TestClient.ts  index.js  package-lock.json  package.json  tsconfig.json
src/cpp/: CMakeLists.txt  index.d.ts  index.js  md5.hpp  miner.cpp  package.json
src/cpp/bind/: CMakeLists.txt  README.md
src/cpp/bind/include/bind/: bind.hpp
src/cpp/include/bind/: bind_primitive.hpp  bind_stl.hpp
src/cpp/include/bs/: bind.hpp  miner.hpp
src/cpp/src/: addon.cpp  md5.cpp  miner.cpp
src/mongo/: Server.ts  package-lock.json  package.json  tsconfig.json
src/ts/: ApplicationRoutes.ts  ApplicationServer.ts  Block.ts  BlockChain.ts  BlockPayload.ts  BlockStore.ts  BlockstoreRoutes.ts  BlockstoreServer.ts  Cluster.ts  Config.ts  DummyKVStore.ts  GenericKVStore.ts  Http.ts  IKVStore.ts  Operation.ts  ReplicatedChain.ts  block.ts  config.ts  config.yaml  index.ts  package-lock.json  package.json  tsconfig.json
ts/: .gitignore  Block.ts  CMakeLists.txt  http.ts  index.ts  package-lock.json  package.json  tsconfig.json
ts/src/: addon.cpp  async.cc  bind.hpp  md5.cpp  miner.cpp  miner.hpp
(+75 files in other folders)
